Add ability to click on author to search all posts

--- a/src/views/postMain.ejs
+++ b/src/views/postMain.ejs
@@ -36,7 +36,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home</a>
+                    <a class="nav-link" href="/posts">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="about.html">About</a>
@@ -82,7 +82,7 @@
                     </h3>
                 </a>
                 <p class="post-meta">Posted by
-                    <a href="#"><%=posts[i].userId%></a>
+                    <a href="/posts/user"><%=posts[i].userId%></a>
                     on September 24, 2019</p>
             </div>
             <hr>
